@@ -1,5 +1,7 @@
 CHANGES IN FLTK 1.1.5rc1
 
+	- Added new hoverdelay() to Fl_Tooltip to control how
+	  quickly recent tooltips appear (STR #126)
 	- FLUID now sets the size range when a window is shown.
 	  This seems to be necessary with some window managers
 	  (STR #166)
